--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Asimovian&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 @import "tailwindcss";
 
-/* Import Robotic / Futuristic Fonts from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Audiowide&family=Rajdhani:wght@400;500;600;700&family=Exo+2:wght@300;400;600;700&display=swap');
 
-@import "tailwindcss";
+
+
+
+
 
 /* Example: Set Orbitron as the main font */
-body {
-  font-family: 'Orbitron', sans-serif;
+.font-exo{
+  font-family: "Asimovian", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-/* Optional: You can create font utility classes if you want multiple robotic styles */
+.font-rajdhani {
+   font-family: "Bungee", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Optional: You can create font utility classes if you want multiple robotic styles
 .font-orbitron {
   font-family: 'Orbitron', sans-serif;
 }
@@ -26,4 +37,4 @@ body {
 
 .font-exo {
   font-family: 'Exo 2', sans-serif;
-}
+} */
